# stackoverflow-gpt

./: .env  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  langfuse.env  plan.excalidraw  pyproject.toml  records.txt  run.sh  start.sh
.gitea/workflows/: test.yml
archive/custom_GPT/: chatui.py  index.html  requirements.txt  start.sh  vector_graph_retriever.py
archive/custom_GPT/embeddings/: setup.py  stackoverflow.py
archive/custom_GPT/loader/v1/: info.txt  llmz.py  loader.Dockerfile  loader.py  qbot.py  streamlit_UI.py
archive/custom_GPT/netflix_app/: analyze-netflix-data-using-graphs-neo4j.ipynb  app.py  backend.Dockerfile  frontend.Dockerfile  main.py  requirements.txt
archive/custom_GPT/netflix_app/data_netlix/: view.txt
archive/custom_GPT/stackoverflow/: backend.py  init.py  web.py
archive/custom_GPT/utils/: chains.py  scanfiles.py
archive/docker-genai-sample/: requirements.txt
backend/: Dockerfile  README.Docker.md  backend.py  main.py  prompts.py
backend/app/: backend.py  graph.py
backend/prompts/: core.py  st_overflow.py
backend/setup/: init.py
backend/setup/data/: neo4j_query_saved_cypher_2025-10-27.csv
backend/tools/: custom_tool.py  movies.py
backend/utils/: memory.py  util.py
frontend/: Dockerfile  utils.py  web.py
frontend/pages/: dashboard.py  loader.py  logs.py
frontend/utils/: util.py  utils.py
responses/: ref.md  schema.md  test_response.md
